# pdf-ai-analyzer

./: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: app.py  document.py  llm.py  schema.py
app/auth/: auth.py
app/core/: dependencies.py
app/db/: session.py
app/db/models/: document.py  user.py
app/service/: auth_service.py  document_service.py  llm_service.py  storage_service.py
