[project]
name = "pdfbeta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.128.8",
    "pdfplumber>=0.11.9",
    "psycopg2-binary>=2.9.11",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.47",
    "uvicorn>=0.40.0",
]
